--- a/src/app/pages/comment/comment-list/comment-list.component.less
+++ b/src/app/pages/comment/comment-list/comment-list.component.less
@@ -1,22 +1,22 @@
 .status, .op-btn {
   &-normal {
-    color: #389e0d;
+    color: var(--status-normal-color);
   }
 
   &-pending {
-    color: #ff4d4f;
+    color: var(--status-pending-color);
   }
 
   &-reject {
-    color: #faad14;
+    color: var(--status-reject-color);
   }
 
   &-spam {
-    color: #531dab;
+    color: var(--status-spam-color);
   }
 
   &-trash {
-    color: #666;
+    color: var(--status-disabled-color);
   }
 }
 
