add post list filter; some optimizations

--- a/src/app/pages/comment/comment-list/comment-list.component.html
+++ b/src/app/pages/comment/comment-list/comment-list.component.html
@@ -36,7 +36,7 @@
     <th nzWidth="130px" nzColumnKey="created" [nzSortFn]="true" [nzSortPriority]="true">时间</th>
     <th nzWidth="80px" [nzFilters]="statusFilter" [nzFilterFn]="true" nzColumnKey="status">状态</th>
     <th nzWidth="60px" nzColumnKey="commentVote" [nzSortFn]="true" [nzSortPriority]="true">点赞</th>
-    <th nzWidth="100px" nzColumnKey="commentUser">评论用户</th>
+    <th nzWidth="100px" nzColumnKey="user">评论用户</th>
     <th nzWidth="140px" nzColumnKey="email">评论邮箱</th>
     <th nzRight>操作</th>
   </tr>
