--- a/src/app/pages/post/post-list/post-list.component.html
+++ b/src/app/pages/post/post-list/post-list.component.html
@@ -1,16 +1,16 @@
 <div class="table-operations" [ngSwitch]="postType">
   <ng-container *ngSwitchCase="'post'">
     <a nz-button nzType="primary" routerLink="/post/form">写文章</a>
-    <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">编辑</button>
+    <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">快速编辑</button>
   </ng-container>
   <ng-container *ngSwitchCase="'page'">
     <a nz-button nzType="primary" routerLink="/post/form-standalone">创建新页面</a>
-    <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">编辑</button>
+    <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">快速编辑</button>
   </ng-container>
   <ng-container *ngSwitchCase="'attachment'">
     <a nz-button nzType="primary" routerLink="/resource/upload">上传文件</a>
   </ng-container>
-  <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">删除</button>
+  <button nz-button nzType="default" [disabled]="!trashEnabled" [nzLoading]="false">删除</button>
   <div class="table-search">
     <nz-input-group nzSearch [nzAddOnAfter]="searchBtn">
       <input type="text" nz-input [(ngModel)]="keyword" (keyup)="onSearch($event)" placeholder="Search..."/>
@@ -40,13 +40,22 @@
     <th nzWidth="40px" [nzChecked]="allChecked" [nzIndeterminate]="indeterminate" (nzCheckedChange)="onAllChecked($event)"></th>
     <ng-container *ngIf="postType !== 'attachment'">
       <th nzWidth="220px" nzColumnKey="postTitle">标题</th>
-      <th nzWidth="90px" nzColumnKey="postDate" [nzSortFn]="true" [nzSortPriority]="true">日期</th>
+      <th nzWidth="90px" nzColumnKey="postDate" [nzSortFn]="true" [nzSortPriority]="true" nzCustomFilter>
+        日期
+        <nz-filter-trigger
+          [(nzVisible)]="postDateFilterVisible"
+          (nzVisibleChange)="onPostDateFilterVisibleChange($event)"
+          [nzActive]="!!postDateYear"
+          [nzDropdownMenu]="dateList">
+          <i nz-icon nzType="filter" nzTheme="fill"></i>
+        </nz-filter-trigger>
+      </th>
       <th nzWidth="120px" nzColumnKey="category" *ngIf="postType === 'post'">分类</th>
       <th nzColumnKey="tag">标签</th>
       <th nzWidth="80px" nzColumnKey="postViewCount" [nzSortFn]="true" [nzSortPriority]="true">访问</th>
       <th nzWidth="60px" nzColumnKey="commentCount" [nzSortFn]="true" [nzSortPriority]="true">评论</th>
-      <th nzWidth="80px" nzColumnKey="postStatus">状态</th>
-      <th nzWidth="80px" nzColumnKey="commentFlag">评论状态</th>
+      <th nzWidth="80px" [nzFilters]="statusFilter" [nzFilterFn]="true" nzColumnKey="postStatus">状态</th>
+      <th nzWidth="100px" [nzFilters]="commentFlagFilter" [nzFilterFn]="true" nzColumnKey="commentFlag">评论状态</th>
       <th nzWidth="140px" nzColumnKey="postModified" [nzSortFn]="true" [nzSortPriority]="true">修改时间</th>
       <th nzWidth="140px" nzColumnKey="postCreated" [nzSortFn]="true" [nzSortPriority]="true">创建时间</th>
       <th nzWidth="80px" nzColumnKey="author">作者</th>
@@ -84,7 +93,10 @@
         <a [ngClass]="'status-' + data.post.postStatus"
            routerLink="./" [queryParams]="{status: data.post.postStatus}">{{ data.post.postStatus | postStatus }}</a>
       </td>
-      <td [ngClass]="'comment-flag-' + data.post.commentFlag">{{ data.post.commentFlag | commentFlag }}</td>
+      <td>
+        <a [ngClass]="'comment-flag-' + data.post.commentFlag"
+           routerLink="./" [queryParams]="{commentFlag: data.post.commentFlag}">{{ data.post.commentFlag | commentFlag }}</a>
+      </td>
       <td [title]="data.post.postModified | date:'yyyy-MM-dd HH:mm'">{{ data.post.postModified | date:'yy-MM-dd HH:mm' }}</td>
       <td [title]="data.post.postCreated | date:'yyyy-MM-dd HH:mm'">{{ data.post.postCreated | date:'yy-MM-dd HH:mm' }}</td>
       <td nzEllipsis [title]="data.meta['postAuthor']">{{ data.meta['postAuthor'] }}</td>
@@ -112,3 +124,19 @@
 <ng-template #rangeTemplate let-range="range" let-total>
   当前：第 <span style="color: red">{{ range[0] }}-{{ range[1] }}</span> 条，共：<span style="color: red">{{ total }}</span> 条
 </ng-template>
+<nz-dropdown-menu #dateList>
+  <div class="ant-table-filter-dropdown">
+    <div class="filter-box">
+      <nz-select nzAllowClear [(ngModel)]="postDateYear" (ngModelChange)="onPostDateYearChange($event)" nzPlaceHolder="年">
+        <nz-option *ngFor="let item of postDateYearList" [nzLabel]="item.label" [nzValue]="item.value"></nz-option>
+      </nz-select>
+      <nz-select nzAllowClear [(ngModel)]="postDateMonth" nzPlaceHolder="月">
+        <nz-option *ngFor="let item of postDateMonthList" [nzLabel]="item.label" [nzValue]="item.value"></nz-option>
+      </nz-select>
+      <div class="filter-btns">
+        <button nz-button nzSize="small" nzType="link" (click)="onPostDateFilterReset()" [disabled]="!postDateYear">重置</button>
+        <button nz-button nzSize="small" nzType="primary" (click)="onPostDateFilterOk()" class="search-button">确定</button>
+      </div>
+    </div>
+  </div>
+</nz-dropdown-menu>
