--- a/src/app/pages/post/post-list/post-list.component.less
+++ b/src/app/pages/post/post-list/post-list.component.less
@@ -51,6 +51,9 @@ nz-tag:hover {
       margin-left: @space-width;
     }
   }
+  nz-tree-select {
+    width: 180px;
+  }
   .filter-btns {
     margin-top: @space-width;
     padding-top: 8px;
