--- a/src/app/pages/post/post-list/post-list.component.less
+++ b/src/app/pages/post/post-list/post-list.component.less
@@ -42,25 +42,45 @@ nz-tag:hover {
     color: var(--status-disabled-color);
   }
 }
+
 .filter-box {
   @space-width: 8px;
   padding: @space-width;
+
   nz-select {
     width: 100px;
+
     + nz-select {
       margin-left: @space-width;
     }
   }
+
   nz-tree-select {
     width: 180px;
   }
+
   .filter-btns {
     margin-top: @space-width;
     padding-top: 8px;
     border-top: 1px solid #f0f0f0;
     text-align: center;
+
     [nz-button] + [nz-button] {
       margin-left: @space-width;
     }
+  }
+}
+
+.post-form {
+  nz-form-label {
+    width: 100px;
+  }
+}
+
+.select-loading {
+  text-align: center;
+
+  [nz-icon] {
+    margin-right: 8px;
   }
 }
